--- a/bill/templates/bill/quant.html
+++ b/bill/templates/bill/quant.html
@@ -1,13 +1,13 @@
 {%extends 'bill/base.html'%}
 {%block body%}
-<div>
-<table style="width:100%">
+<form action="{% url 'bill:printp' %}" method="post">
+{% csrf_token %}
+<table style="width:100%" border="boder">
 	<tr>
 	    <th>Width in mm</th>
 	    <th>Article No.</th> 
 	    <th>Details</th>
 	    <th>Selling Price in Rs.</th>
-	    <th>Stock</th>
 	    <th>Quantity</th>
 	    <th>Total</th>
 	</tr>
@@ -17,22 +17,30 @@
 		<td>&nbsp;&nbsp;&nbsp;{{ sel_prod_obj.prod_artno }}</td>
 		<td>&nbsp;&nbsp;&nbsp;{{ sel_prod_obj.prod_desc }}</td>
 		<td><input id="price{{ forloop.counter }}" value="{{ sel_prod_obj.prod_rps }}" readonly="readonly"></td>
-		<td>&nbsp;&nbsp;&nbsp;{{ sel_prod_obj.prod_stock }}</td>
-		<td>&nbsp;&nbsp;&nbsp;<input type="in" name="quant{{ forloop.counter }}" id="quant{{ forloop.counter }}" width="60px" oninput="$('#total{{ forloop.counter }}').val($('#price{{ forloop.counter }}').val()*$('#quant{{ forloop.counter }}').val())" value="0"></td>
-		<th>&nbsp;&nbsp;&nbsp;<input name="total{{ forloop.counter }}" id="total{{ forloop.counter }}" width="60px" value="0" readonly="readonly"></td>
+		<td>&nbsp;&nbsp;&nbsp;<input type="in" name="quant{{ forloop.counter }}" id="quant{{ forloop.counter }}" oninput="$('#total{{ forloop.counter }}').val($('#price{{ forloop.counter }}').val()*$('#quant{{ forloop.counter }}').val())" value="0"></td>
+		<th>&nbsp;&nbsp;&nbsp;<input name="total{{ forloop.counter }}" id="total{{ forloop.counter }}" value="0" readonly="readonly"></td>
 	</tr>
 	{% endfor %}
 </table>
 <label for="sub_total">Sub Total</label>
 <input name="sub_total" id="sub_total" readonly="readonly">
+{% if t_type_val %}
+<br>
+<label for="bcp">BCP discount at 25%</label>
+<input name="bcp" id="bcp" readonly="readonly">
+{% endif %}
+<br>
+<label for="total">Total</label>
+<input name="total" id="total" readonly="readonly">
 <br>
 <label for="gst">GST at 18%</label>
 <input name="gst" id="gst" readonly="readonly">
-{% if t_type==1 %}
-<label for="bcp">GST at 18%</label>
-<input name="bcp" id="bcp" readonly="readonly">
-{% endif %}
+<br>
+<label for="gtotal">Grand Total</label>
+<input name="gtotal" id="gtotal" readonly="readonly">
 </div>
+<button type="submit" name="subbb">next</button>
+</form>
 <script type="text/javascript">
 window.setInterval(function(){
 	var sum = 0;
@@ -42,10 +50,21 @@ window.setInterval(function(){
 		sum = sum+parseFloat($(name).val());
 	}
 	$("#sub_total").val(sum);
-	var gstx = parseFloat($('#sub_total').val())*parseFloat(0.18);
+	var bcpx = parseFloat($('#sub_total').val())*parseFloat(0.25);
+	$('#bcp').val(bcpx);
+	if("{{t_type_val}}" == "1")
+	{
+	$('#total').val(parseFloat($('#sub_total').val())-bcpx);
+	var gstx = (parseFloat($('#sub_total').val())-bcpx)*parseFloat(0.18);
 	$('#gst').val(gstx);
-	var gstx = parseFloat($('#sub_total').val())*parseFloat(0.18);
-	$('#gst').val(gstx);
+	}
+	else
+	{
+		$('#total').val(parseFloat($('#sub_total').val()));
+		var gstx = (parseFloat($('#sub_total').val())*parseFloat(0.18));
+		$('#gst').val(gstx);
+	}
+	$('#gtotal').val(parseFloat($('#total').val())+gstx);
 }, 500);
 </script>
 {%endblock%}
